--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@ title: HOME
 </div>
 <div class="row" id="work">
     <div class="small-12 columns">
-        <h3 class="section-header">WORK</h3>
+      <h3 class="section-header">WORK</h3>
+    </div>
+    <div class="small-12 columns">
+      <h2 class="section-header"><small>WHAT THEY SAY</small></h2>
+      <p>Rave Review from a satisfied client!</p>
     </div>
 </div>
 <div class="row" id="about">
@@ -19,13 +23,30 @@ title: HOME
         <h3 class="section-header">ABOUT</h3>
     </div>
     <div class="small-12 columns">
-        <p>Gray Bike is a one-person software consultancy ran by me, Pavan Trikutam. I'm an entrepreneur, developer, and designer living in San Francisco. I help small businesses, non-profits, and startups use technology to solve their business problems. I work by myself and hire people on a per-project basis as needed.</p>
-        
+        <p>Gray Bike is a one-person software consultancy ran by me, Pavan Trikutam. I'm an entrepreneur, developer, and designer living in San Francisco. I've got over 8 years of experience building things for the web and mobile. I help small businesses, non-profits, and startups use technology to solve their business problems. I work by myself and hire people on a per-project basis as needed.</p>
+
         <p>In addition to helping folks build technology, I am co-founder and chief technologist of <a href="http://www.truecurrency.com">True Currency</a>, a site which helps travelers save money when shopping abroad. I also mentor students learning front-end web development at <a href="http://www.thinkful.com/">Thinkful</a>.</p>
         <p>Interested in working together? <a href="/#hire">Let's Talk.</a></p>
     </div>
     <div class="small-12 columns">
         <h2 class="section-header"><small>SERVICES OFFERED</small></h2>
+        <div class="small-12 medium-5 columns">
+          <h5 class="section-header">Technical</h5>
+          <ul>
+            <li>Back End Web: PHP, Ruby, Java</li>
+            <li>Front End Web: HTML, CSS, JavaScript, and other tools</li>
+            <li>Android Development</li>
+            <li>Shopify Apps & Themes</li>
+          </ul>
+        </div>
+        <div class="small-12 medium-5 medium-offset-2 columns">
+          <h5 class="section-header">Non-Technical</h5>
+          <ul>
+            <li>UX Design</li>
+            <li>Content Strategy</li>
+            <li>Product Development</li>
+          </ul>
+        </div>
     </div>
 </div>
 <div class="row" id="hire">
@@ -34,6 +55,7 @@ title: HOME
     </div>
     <div class="small-12 medium-4 columns">
         <p>Got a cool project? I'd love to hear about it! Send me a little info and we'll get started!</p>
+        <p><em>If you know it, let me know your ideal timeline, your current website, and any other info I need to understand your project</em></p>
     </div>
     <div class="small-12 medium-8 columns">
         <form>
@@ -81,7 +103,8 @@ title: HOME
 <script>
 //Code to Rotate Services.
 // var services = ["android apps", "websites", "eCommerce storefronts", "custom software"];
-// $(document).ready(function() {
+$(document).ready(function() {
+  $(".nav-link").css("top", $(".nav-link").parent().height()/4);
 //   var i = 0;
 //   window.setInterval(function() {
         //     $("#services span:first-child").slideUp().hide();
@@ -92,5 +115,5 @@ title: HOME
         //       i = 0;
         //     };
 //   }, 1500);
-// });
+});
 </script>
