--- a/index.html
+++ b/index.html
@@ -12,18 +12,28 @@ title: HOME
 <div class="row" id="work">
     <div class="small-12 columns">
       <h3 class="section-header">WORK</h3>
+      <div class="small-12 medium-4 columns project text-center">
+        <img src="/images/project.jpg">
+      </div>
+      <div class="small-12 medium-4 columns project text-center">
+        <img src="/images/project.jpg">
+      </div>
+      <div class="small-12 medium-4 columns project text-center">
+      <img src="/images/project.jpg">
+      </div>
     </div>
     <div class="small-12 columns">
       <h2 class="section-header"><small>WHAT THEY SAY</small></h2>
-      <p>Rave Review from a satisfied client!</p>
+      <blockquote>I do not fear computers. I fear the lack of them. Maecenas faucibus mollis interdum. Aenean lacinia bibendum nulla sed consectetur.<cite>Isaac Asimov</cite></blockquote>
     </div>
+
 </div>
 <div class="row" id="about">
     <div class="small-12 columns">
         <h3 class="section-header">ABOUT</h3>
     </div>
     <div class="small-12 columns">
-        <p>Gray Bike is a one-person software consultancy ran by me, Pavan Trikutam. I'm an entrepreneur, developer, and designer living in San Francisco. I've got over 8 years of experience building things for the web and mobile. I help small businesses, non-profits, and startups use technology to solve their business problems. I work by myself and hire people on a per-project basis as needed.</p>
+        <p>Gray Bike is a software consultancy ran by me, Pavan Trikutam. I'm an entrepreneur, developer, and designer living in San Francisco. I've got over 8 years of experience building things for the web and mobile. I help small businesses, non-profits, and startups use technology to solve their business problems. I work by myself and hire people on a per-project basis as needed.</p>
 
         <p>In addition to helping folks build technology, I am co-founder and chief technologist of <a href="http://www.truecurrency.com">True Currency</a>, a site which helps travelers save money when shopping abroad. I also mentor students learning front-end web development at <a href="http://www.thinkful.com/">Thinkful</a>.</p>
         <p>Interested in working together? <a href="/#hire">Let's Talk.</a></p>
@@ -47,6 +57,9 @@ title: HOME
             <li>Product Development</li>
           </ul>
         </div>
+    </div>
+    <div class="small-12 columns">
+      <h2 class="section-header"><small>FOLKS I'VE WORKED WITH</small></h2>
     </div>
 </div>
 <div class="row" id="hire">
