Added work images & began portfolio building.

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@ title: HOME
     <div class="small-12 columns">
       <h3 class="section-header">WORK</h3>
       <div class="small-12 medium-4 columns project text-center">
-        <img src="/images/project.jpg">
+        <img src="/images/truecurrency/tc-thumbnail.png">
       </div>
       <div class="small-12 medium-4 columns project text-center">
-        <img src="/images/project.jpg">
+        <img src="/images/2teecouture/2tee-thumbnail.png">
       </div>
       <div class="small-12 medium-4 columns project text-center">
-      <img src="/images/project.jpg">
+      <img src="/images/salt/salt-thumbnail.png">
       </div>
     </div>
     <div class="small-12 columns">
