Added better headers for projects.

--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@ title: HOME
       <h3 class="section-header">WORK</h3>
       <div class="small-12 medium-4 columns project text-center">
         <img src="/images/truecurrency/tc-thumbnail.png">
+        <h3><small>True Currency</small></h3>
       </div>
       <div class="small-12 medium-4 columns project text-center">
         <img src="/images/2teecouture/2tee-thumbnail.png">
+        <h3><small>2tee Couture</small></h3>
       </div>
       <div class="small-12 medium-4 columns project text-center">
       <img src="/images/salt/salt-thumbnail.png">
+      <h3><small>SALT Technologies</small></h3>
       </div>
     </div>
     <div class="small-12 columns">
