Added styles, adjusted text.

--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@ title: HOME
         <div class="small-12 medium-5 columns">
           <h5 class="section-header">Technical</h5>
           <ul>
-            <li>Back End Web: PHP, Ruby, Java</li>
-            <li>Front End Web: HTML, CSS, JavaScript, and other tools</li>
-            <li>Android Development</li>
+            <li>Full Stack Web Design & Development (Back & Front End)</li>
+            <li>Android Design & Development</li>
             <li>Shopify Apps & Themes</li>
           </ul>
         </div>
@@ -103,7 +102,7 @@ title: HOME
             </div>
             <div class="row">
                 <div class="large-12 columns">
-                    <label>Tell me about your project!
+                    <label>Tell me about your project! The more detail you provide, the better I can help you!
                         <textarea placeholder="Project description"></textarea>
                     </label>
                 </div>
@@ -120,6 +119,7 @@ title: HOME
 //Code to Rotate Services.
 // var services = ["android apps", "websites", "eCommerce storefronts", "custom software"];
 $(document).ready(function() {
+  //TODO: Only adjust value if on medium or larger screen.
   $(".nav-link").css("top", $(".nav-link").parent().height()/4);
 //   var i = 0;
 //   window.setInterval(function() {
