Added logo, other styles.

--- a/index.html
+++ b/index.html
@@ -2,134 +2,139 @@
 layout: default
 title: HOME
 ---
-<div class="row">
-    <div class="small-12 columns taglines">
-        <h2>
-        I design & build <span id="services">custom software</span>.
-        </h2>
-    </div>
-</div>
-<div class="row" id="work">
-    <div class="small-12 columns">
-      <h3 class="section-header">WORK</h3>
-      <div class="small-12 medium-4 columns project text-center">
-        <img src="/images/truecurrency/tc-thumbnail.png">
-        <h3><small>True Currency</small></h3>
+<div class="home">
+  <div class="row section">
+      <div class="small-12 columns taglines">
+          <h2>
+          I design & build <span id="services">custom software</span>.
+          </h2>
       </div>
-      <div class="small-12 medium-4 columns project text-center">
-        <img src="/images/2teecouture/2tee-thumbnail.png">
-        <h3><small>2tee Couture</small></h3>
-      </div>
-      <div class="small-12 medium-4 columns project text-center">
-      <img src="/images/salt/salt-thumbnail.png">
-      <h3><small>SALT Technologies</small></h3>
-      </div>
-    </div>
-    <div class="small-12 columns">
-      <h2 class="section-header"><small>WHAT THEY SAY</small></h2>
-      <blockquote>I do not fear computers. I fear the lack of them. Maecenas faucibus mollis interdum. Aenean lacinia bibendum nulla sed consectetur.<cite>Isaac Asimov</cite></blockquote>
-    </div>
-
-</div>
-<div class="row" id="about">
-    <div class="small-12 columns">
-        <h3 class="section-header">ABOUT</h3>
-    </div>
-    <div class="small-12 columns">
-        <p>Gray Bike is a software consultancy ran by me, Pavan Trikutam. I'm an entrepreneur, developer, and designer living in San Francisco. I've got over 8 years of experience building things for the web and mobile. I help small businesses, non-profits, and startups use technology to solve their business problems. I work by myself and hire people on a per-project basis as needed.</p>
-
-        <p>In addition to helping folks build technology, I am co-founder and chief technologist of <a href="http://www.truecurrency.com">True Currency</a>, a site which helps travelers save money when shopping abroad. I also mentor students learning front-end web development at <a href="http://www.thinkful.com/">Thinkful</a>.</p>
-        <p>Interested in working together? <a href="/#hire">Let's Talk.</a></p>
-    </div>
-    <div class="small-12 columns">
-        <h2 class="section-header"><small>SERVICES OFFERED</small></h2>
-        <div class="small-12 medium-5 columns">
-          <h5 class="section-header">Technical</h5>
-          <ul>
-            <li>Full Stack Web Design & Development (Back & Front End)</li>
-            <li>Android Design & Development</li>
-            <li>Shopify Apps & Themes</li>
-          </ul>
+  </div>
+  <div class="row section" id="work">
+      <div class="small-12 columns">
+        <h3 class="section-header">WORK</h3>
+        <div class="small-12 medium-4 columns project text-center">
+          <img src="/images/truecurrency/tc-thumbnail.png">
+          <h3><small>True Currency</small></h3>
         </div>
-        <div class="small-12 medium-5 medium-offset-2 columns">
-          <h5 class="section-header">Non-Technical</h5>
-          <ul>
-            <li>UX Design</li>
-            <li>Content Strategy</li>
-            <li>Product Development</li>
-          </ul>
+        <div class="small-12 medium-4 columns project text-center">
+          <img src="/images/2teecouture/2tee-thumbnail.png">
+          <h3><small>2tee Couture</small></h3>
         </div>
-    </div>
-    <div class="small-12 columns">
-      <h2 class="section-header"><small>FOLKS I'VE WORKED WITH</small></h2>
-    </div>
-</div>
-<div class="row" id="hire">
-    <div class="small-12 columns">
-        <h3 class="section-header">HIRE ME</h3>
-    </div>
-    <div class="small-12 medium-4 columns">
-        <p>Got a cool project? I'd love to hear about it! Send me a little info and we'll get started!</p>
-        <p><em>If you know it, let me know your ideal timeline, your current website, and any other info I need to understand your project</em></p>
-    </div>
-    <div class="small-12 medium-8 columns">
-        <form>
-            <div class="row">
-                <div class="large-12 columns">
-                    <label>What's your name/company?
-                        <input type="text" placeholder="Name/Company" />
-                    </label>
-                </div>
-            </div>
-            <div class="row">
-                <div class="large-12 columns">
-                    <label>What's your email?
-                        <input type="text" placeholder="Email" />
-                    </label>
-                </div>
-            </div>
-            <div class="row">
-                <div class="large-12 columns">
-                    <label>What's your budget?
-                        <select>
-                            <option value="3to5">$3,000 - $5,000</option>
-                            <option value="5to10">$5,000 - $10,000</option>
-                            <option value="10to20">$10,000 - $12,000</option>
-                            <option value="20plus">$20,000+</option>
-                        </select>
-                    </label>
-                </div>
-            </div>
-            <div class="row">
-                <div class="large-12 columns">
-                    <label>Tell me about your project! The more detail you provide, the better I can help you!
-                        <textarea placeholder="Project description"></textarea>
-                    </label>
-                </div>
-            </div>
-            <div class="row">
-              <div class="large-12 columns">
-                <button type="submit">Submit</button>
+        <div class="small-12 medium-4 columns project text-center">
+        <img src="/images/salt/salt-thumbnail.png">
+        <h3><small>SALT Technologies</small></h3>
+        </div>
+      </div>
+      <div class="small-12 columns">
+        <h2 class="section-header"><small>WHAT THEY SAY</small></h2>
+        <blockquote>I do not fear computers. I fear the lack of them. Maecenas faucibus mollis interdum. Aenean lacinia bibendum nulla sed consectetur.<cite>Isaac Asimov</cite></blockquote>
+      </div>
+
+  </div>
+  <div class="row section" id="about">
+      <div class="small-12 columns">
+          <h3 class="section-header">ABOUT</h3>
+      </div>
+      <div class="small-12 columns">
+          <p>Gray Bike is a software consultancy ran by me, Pavan Trikutam. I'm an entrepreneur, developer, and designer living in San Francisco. I've got over 8 years of experience building things for the web and mobile. I help small businesses, non-profits, and startups use technology to solve their business problems. I work by myself and hire people on a per-project basis as needed.</p>
+
+          <p>In addition to helping folks build technology, I am co-founder and chief technologist of <a href="http://www.truecurrency.com">True Currency</a>, a site which helps travelers save money when shopping abroad. I also mentor students learning front-end web development at <a href="http://www.thinkful.com/">Thinkful</a>.</p>
+          <p>Interested in working together? <a href="/#hire">Let's Talk.</a></p>
+      </div>
+      <div class="small-12 columns">
+          <h2 class="section-header"><small>SERVICES OFFERED</small></h2>
+          <div class="small-12 medium-5 columns">
+            <h5 class="section-header">Technical</h5>
+            <ul>
+              <li>Full Stack Web Design & Development (Back & Front End)</li>
+              <li>Android Design & Development</li>
+              <li>Shopify Apps & Themes</li>
+            </ul>
+          </div>
+          <div class="small-12 medium-5 medium-offset-2 columns">
+            <h5 class="section-header">Non-Technical</h5>
+            <ul>
+              <li>UX Design</li>
+              <li>Content Strategy</li>
+              <li>Product Development</li>
+            </ul>
+          </div>
+      </div>
+      <div class="small-12 columns">
+        <h2 class="section-header"><small>FOLKS I'VE WORKED WITH</small></h2>
+      </div>
+  </div>
+  <div class="row section" id="hire">
+      <div class="small-12 columns">
+          <h3 class="section-header">HIRE ME</h3>
+      </div>
+      <div class="small-12 medium-4 columns">
+          <p>Got a cool project? I'd love to hear about it! Send me a little info and we'll get started!</p>
+          <p><em>If you know it, let me know your ideal timeline, your current website, and any other info I need to understand your project</em></p>
+      </div>
+      <div class="small-12 medium-8 columns">
+          <form>
+              <div class="row">
+                  <div class="large-12 columns">
+                      <label>What's your name/company?
+                          <input type="text" placeholder="Name/Company" />
+                      </label>
+                  </div>
               </div>
-            </div>
-        </form>
-    </div>
+              <div class="row">
+                  <div class="large-12 columns">
+                      <label>What's your email?
+                          <input type="text" placeholder="Email" />
+                      </label>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="large-12 columns">
+                      <label>What's your budget?
+                          <select>
+                              <option value="3to5">$3,000 - $5,000</option>
+                              <option value="5to10">$5,000 - $10,000</option>
+                              <option value="10to20">$10,000 - $12,000</option>
+                              <option value="20plus">$20,000+</option>
+                          </select>
+                      </label>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="large-12 columns">
+                      <label>Tell me about your project! The more detail you provide, the better I can help you!
+                          <textarea placeholder="Project description"></textarea>
+                      </label>
+                  </div>
+              </div>
+              <div class="row">
+                <div class="large-12 columns">
+                  <button type="submit">Submit</button>
+                </div>
+              </div>
+          </form>
+      </div>
+  </div>
+  <script>
+  //Code to Rotate Services.
+  // var services = ["android apps", "websites", "eCommerce storefronts", "custom software"];
+  $(document).ready(function() {
+    //TODO: Only adjust value if on medium or larger screen.
+    if ($(document).width() > 735) {
+      $(".nav-link").css("top", $(".nav-link").parent().height()/4);  
+    }
+    
+  //   var i = 0;
+  //   window.setInterval(function() {
+          //     $("#services span:first-child").slideUp().hide();
+          //     $("#services span:nth-child(2)").html(services[i]).show().slideUp();
+          //     // console.log(services[i]);
+          //     i = i + 1;
+          //     if (i >= services.length) {
+          //       i = 0;
+          //     };
+  //   }, 1500);
+  });
+  </script>
 </div>
-<script>
-//Code to Rotate Services.
-// var services = ["android apps", "websites", "eCommerce storefronts", "custom software"];
-$(document).ready(function() {
-  //TODO: Only adjust value if on medium or larger screen.
-  $(".nav-link").css("top", $(".nav-link").parent().height()/4);
-//   var i = 0;
-//   window.setInterval(function() {
-        //     $("#services span:first-child").slideUp().hide();
-        //     $("#services span:nth-child(2)").html(services[i]).show().slideUp();
-        //     // console.log(services[i]);
-        //     i = i + 1;
-        //     if (i >= services.length) {
-        //       i = 0;
-        //     };
-//   }, 1500);
-});
-</script>
