Changed wording to individual, added some color.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: HOME
   <div class="row section">
       <div class="small-12 columns taglines">
           <h2>
-          We design & build <span id="services">custom software</span>.
+          I design & build <span id="services">custom software</span>.
           </h2>
       </div>
   </div>
