Added color, added profile picture, and messed with styles.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: HOME
 ---
 <div class="home">
-  <div class="row section">
+  <div class="row section blue">
       <div class="small-12 columns taglines">
           <h2>
           I design & build <span id="services">custom software</span>.
@@ -15,6 +15,9 @@ title: HOME
   </div>
   <div class="row section" id="about">
       {% include about.html %}
+  </div>
+  <div class="row section" id="services-clients">
+      {% include services-clients.html %}
   </div>
   <div class="row section" id="hire">
       {% include hireme.html %}
