Added better styling for the tagline section.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: HOME
 ---
 <div class="home">
-  <div class="row section blue">
+  <div class="row section blue tagline-container">
       <div class="small-12 columns taglines">
           <h2>
           I design & build <span id="services">custom software</span>.
