Added more color to the hire me section.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@ title: HOME
   <div class="row section" id="services-clients">
       {% include services-clients.html %}
   </div>
-  <div class="row section" id="hire">
+  <div class="row section blue" id="hire">
+    <div class="row">
       {% include hireme.html %}
+    </div>
   </div>
   <script>
   //Code to Rotate Services.
