Playing with a triangluated background.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@ title: HOME
 ---
 <div class="home">
   <div class="row section blue tagline-container">
+    <div class="row">
       <div class="small-12 columns taglines">
           <h2>
           I design & build <span id="services">custom software</span>.
           </h2>
       </div>
+    </div>
   </div>
   <div class="row section" id="work">
     {% include work.html %}
