--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: HOME
     <div class="row">
       <div class="small-12 columns taglines">
           <h2>
-          I <span class="rotate-verbs">design & build|craft|create & revise</span> <span class="rotate-nouns">custom software|websites|mobile apps|user experiences|content strategy</span>.
+          I <span class="rotate-verbs">design & build</span> <span class="rotate-nouns">custom software</span>.
           </h2>
       </div>
     </div>
@@ -33,4 +33,5 @@ title: HOME
     }
   });
   </script>
+  <script src='/js/text-rotate.js'  type='text/javascript'></script>
 </div>
