--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@ title: HOME
     <div class="row">
       <div class="small-12 columns taglines">
           <h2>
-          I <span class="rotate-verbs">design & build</span> <span class="rotate-nouns">custom software</span>.
+          <span class="rotate-taglines">
+          I create custom software.|
+          I build apps for Android.|
+          I design user experiences.|
+          I revise content strategy.|
+          I build Shopify stores.
+          </span>
           </h2>
       </div>
     </div>
@@ -31,7 +37,13 @@ title: HOME
     if ($(document).width() > 735) { //Ensure navigation links are at the right height if the screen is large enough.
       $(".nav-link").css("top", $(".nav-link").parent().height()/4);  
     }
+    $(".rotate-taglines").textrotator({
+      animation: "flipUp",
+      separator: "|",
+      speed: 2000
+    });
+    
   });
   </script>
-  <script src='/js/text-rotate.js'  type='text/javascript'></script>
+  <!-- <script src='/js/text-rotate.js'  type='text/javascript'></script> -->
 </div>
