Added an orbit slider instead of the flipping text.

--- a/index.html
+++ b/index.html
@@ -6,44 +6,49 @@ title: HOME
   <div class="row section blue tagline-container">
     <div class="row">
       <div class="small-12 columns taglines">
-          <h2>
-          <span class="rotate-taglines">
+        <ul data-orbit data-options="timer_speed:2000;">
+          <li>
+            <h2>I design & build mobile apps.</h2>
+          </li>
+          <li>
+            <h2>I design user experiences.</h2>
+          </li>
+          <li  class="active">
+            <h2>I design & build custom software.</h2>
+          </li>
+          <li>
+            <h2>I create & revise content strategy.</h2>
+          </li>
+          <li>
+            <h2>I build Shopify stores & apps.</h2>
+          </li>
+        </ul>
+        <!-- <h2>I design & build custom software for multiple devices. -->
+          <!-- <span class="rotate-taglines">
           I create custom software.|
           I build apps for Android.|
           I design user experiences.|
-          I revise content strategy.|
+
           I build Shopify stores.
-          </span>
-          </h2>
-      </div>
+        </span> -->
+      </h2>
     </div>
   </div>
-  <div class="row section" id="work">
-    {% include work.html %}
+</div>
+<div class="row section" id="work">
+  {% include work.html %}
+</div>
+<div class="row section" id="about">
+  {% include about.html %}
+</div>
+<div class="row section" id="services-clients">
+  {% include services-clients.html %}
+</div>
+<div class="row section blue" id="hire">
+  <div class="row">
+    {% include hireme.html %}
   </div>
-  <div class="row section" id="about">
-      {% include about.html %}
-  </div>
-  <div class="row section" id="services-clients">
-      {% include services-clients.html %}
-  </div>
-  <div class="row section blue" id="hire">
-    <div class="row">
-      {% include hireme.html %}
-    </div>
-  </div>
-  <script>
-  $(document).ready(function() {
-    if ($(document).width() > 735) { //Ensure navigation links are at the right height if the screen is large enough.
-      $(".nav-link").css("top", $(".nav-link").parent().height()/4);  
-    }
-    $(".rotate-taglines").textrotator({
-      animation: "flipUp",
-      separator: "|",
-      speed: 2000
-    });
-    
-  });
-  </script>
-  <!-- <script src='/js/text-rotate.js'  type='text/javascript'></script> -->
+</div>
+
+<!-- <script src='/js/text-rotate.js'  type='text/javascript'></script> -->
 </div>
