Increased timer. Removed pause on hover.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: HOME
   <div class="row section blue tagline-container">
     <div class="row">
       <div class="small-12 columns taglines">
-        <ul data-orbit data-options="timer_speed:2000;">
+        <ul data-orbit data-options="timer_speed:3500;pause_on_hover:false;">
           <li>
             <h2>I design & build mobile apps.</h2>
           </li>
