--- a/index.html
+++ b/index.html
@@ -5,32 +5,8 @@ title: HOME
 <div class="home">
   <div class="row section blue tagline-container">
     <div class="row">
-      <div class="small-12 columns taglines">
-        <ul data-orbit data-options="timer_speed:3500;pause_on_hover:false;">
-          <li>
-            <h2>I design & build mobile apps.</h2>
-          </li>
-          <li>
-            <h2>I design user experiences.</h2>
-          </li>
-          <li  class="active">
-            <h2>I design & build custom software.</h2>
-          </li>
-          <li>
-            <h2>I create & revise content strategy.</h2>
-          </li>
-          <li>
-            <h2>I build Shopify stores & apps.</h2>
-          </li>
-        </ul>
-        <!-- <h2>I design & build custom software for multiple devices. -->
-          <!-- <span class="rotate-taglines">
-          I create custom software.|
-          I build apps for Android.|
-          I design user experiences.|
-
-          I build Shopify stores.
-        </span> -->
+      <div class="small-10 small-offset-1 columns taglines">
+        <h2>No-nonsense software design, development, and consulting.</h2>
       </h2>
     </div>
   </div>
