Added new background & updated tagline.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: HOME
   <div class="row section blue tagline-container">
     <div class="row">
       <div class="small-10 small-offset-1 columns taglines">
-        <h2>No-nonsense software design, development, and consulting.</h2>
+        <h2>Straightforward software design, engineering, and consulting.</h2>
       </h2>
     </div>
   </div>
