--- a/index.html
+++ b/index.html
@@ -5,26 +5,25 @@ title: HOME
 <div class="home">
   <div class="row section blue tagline-container">
     <div class="row">
-      <div class="small-10 small-offset-1 columns taglines">
+    <div class="small-10 small-offset-1 columns hero taglines">
         <h2>Straightforward software design, engineering, and consulting.</h2>
-      </h2>
+      </div>
     </div>
   </div>
-</div>
-<div class="row section" id="work">
-  {% include work.html %}
-</div>
-<div class="row section" id="about">
-  {% include about.html %}
-</div>
-<div class="row section" id="services-clients">
-  {% include services-clients.html %}
-</div>
-<div class="row section blue" id="hire">
-  <div class="row">
-    {% include hireme.html %}
+  <div class="row section" id="work">
+    {% include work.html %}
   </div>
-</div>
+  <div class="row section" id="about">
+    {% include about.html %}
+  </div>
+  <div class="row section" id="services-clients">
+    {% include services-clients.html %}
+  </div>
+  <div class="row section blue" id="hire">
+    <div class="row">
+      {% include hireme.html %}
+    </div>
+  </div>
 
-<!-- <script src='/js/text-rotate.js'  type='text/javascript'></script> -->
+  <!-- <script src='/js/text-rotate.js'  type='text/javascript'></script> -->
 </div>
