Adding better stuff for twurrl/true currency.

--- a/work/true-currency/index.html
+++ b/work/true-currency/index.html
@@ -8,7 +8,7 @@ categories: ['back-end','front-end','cakephp','iPhone','ux','product design']
 <div class="row section">
   <div class="small-12 columns">
   <h3 class="section-header">OVERVIEW</h3>
-    <p>True Currency is a company that collects & analyzes global product prices in order to give travelers more information on how to save money abroad.</p>
+    <p>True Currency is a company that collects & analyzes global product prices in order to give travelers more information on how to save money abroad. We've developed sophisticated algorithms that perform analysis on product pricing across countries to determine the best values from one location to the next. To power these algorithms, we're building the world's first database that stores actual product prices from across the globe-- and it's growing more and more every day.</p>
   </div>
 </div>
 <div class="row section">
