Added true currency work page.

--- a/work/true-currency/index.html
+++ b/work/true-currency/index.html
@@ -7,7 +7,7 @@ categories: ['back-end','front-end','cakephp','iPhone','ux','product design']
 
 <div class="row section">
   <div class="small-12 columns">
-  <h3 class="section-header">OVERVIEW</h3>
+    <h3 class="section-header">OVERVIEW</h3>
     <p>True Currency is a company that collects & analyzes global product prices in order to give travelers more information on how to save money abroad. We've developed sophisticated algorithms that perform analysis on product pricing across countries to determine the best values from one location to the next. To power these algorithms, we're building the world's first database that stores actual product prices from across the globe-- and it's growing more and more every day.</p>
   </div>
 </div>
@@ -26,5 +26,56 @@ categories: ['back-end','front-end','cakephp','iPhone','ux','product design']
       <li>Appcelerator Titanium</li>
       <li>Objective-C / iOS SDK</li>
     </ul>
+  </div>
+</div>
+<div class="row section text-center">
+  <div class="small-12 columns text-center">
+    <a href="http://www.truecurrency.com" class="blue-button">VISIT SITE</a>
+  </div>
+  </div>
+<div class="row section text-center">
+  <div class="small-12 columns">
+    <img src="/images/work/truecurrency/truecurrency-home.png">
+  </div>
+</div>
+<div class="row section text-center">
+  <div class="small-12 columns">
+    <img src="/images/work/truecurrency/truecurrency-compare-categories.png">
+  </div>
+</div>
+<div class="row section text-center">
+  <div class="small-12 columns">
+    <img src="/images/work/truecurrency/truecurrency-compare-products.png">
+  </div>
+</div>
+
+<div class="row section">
+  <div class="small-10 small-offset-1 columns">
+    <h5 class="section-header">TWURRL</h5>
+    <p>Twurrl was the original brand under which we developed this company. Originally, we developed a mobile app for consumers to use while shopping abroad (and that is still on the roadmap). We've shifted a bit since then, but here is the app that was designed, built, and released to serve that purpose. We've since taken down the app from the app store, but I can send along the app to you directly if you're inclined to see it.</p>
+  </div>
+</div>
+
+<div class="row section text-center">
+  <div class="small-12 medium-6 columns">
+    <img src="/images/work/truecurrency/twurrl-iphone5-index-420w.png">
+  </div>
+  <div class="small-12 medium-6 columns">
+    <img src="/images/work/truecurrency/twurrl-iphone5-price-420w.png">
+  </div>
+</div>
+<div class="row section text-center">
+  <div class="small-12 medium-6 columns">
+    <img src="/images/work/truecurrency/twurrl-iphone5-login-420w.png">
+  </div>
+  <div class="small-12 medium-6 columns">
+    <img src="/images/work/truecurrency/twurrl-iphone5-register-420w.png">
+  </div>
+</div>
+
+<div class="row section text-center">
+  <div class="small-12 columns">
+    <h6 class="section-subheader">SPECIAL THANKS</h6>
+    <p>Special thanks to <a href="http://t1designstudio.com/" target="_blank">Michael Spiegel</a> & <a href="http://www.omar.technology/" target="_blank">Omar Jalazada</a>. Your talented design efforts helped make Twurrl & True Currency what it is today!</p>
   </div>
 </div>
