Added SALT technologies.

--- a/work/2tee-couture/index.html
+++ b/work/2tee-couture/index.html
@@ -2,20 +2,20 @@
 layout: work
 title:  "2tee Couture"
 date:   2014-05-16 18:12:00
-categories: ['back-end','front-end','Shopify','Ruby','Sinatra','UX']
+categories: ['back-end','front-end','Shopify','Ruby','Sinatra','UX', 'Responsive Design']
 ---
 
 <div class="row section">
   <div class="small-12 columns">
     <h3 class="section-header">OVERVIEW</h3>
-    <p>2tee Couture is a women's fashion line based out of LA. They approached me looking to update their out-of-date e-commerce platform & website. I helped them refresh their design, migrate their entire store to the Shopify platform, and customized the back end so they could gain more control over their store.</p>
+    <p>2tee Couture is a women's fashion line based out of LA. They approached me looking to update their out-of-date e-commerce platform & website. I helped them refresh their design (and make it responsive), migrate their entire store to the Shopify platform, and customized the back end so they could gain more control over their store.</p>
   </div>
 </div>
 <div class="row section">
   <div class="small-12 medium-6 columns">
 
     <h5 class="section-subheader">WHAT I DID</h5>
-    <p>For this project, I provided all the services, from design to development. I built the website on top of the Shopify platform, and designed & implemented a new look & feel. I also built some advanced customizations for their store to meet their various business needs.</p>
+    <p>For this project, I provided all the services, from design to development. I built the website on top of the Shopify platform, and designed & implemented a new look & feel. I also built some advanced customizations for their store to meet their various business needs. Of course, the entire site was built to be responsive so it would look good across all devices.</p>
   </div>
   <div class="small-12 medium-6 columns">
     <h5 class="section-subheader">TECHNOLOGIES</h5>
@@ -30,7 +30,7 @@ categories: ['back-end','front-end','Shopify','Ruby','Sinatra','UX']
   <div class="small-12 columns text-center">
     <a href="http://www.2teecouture.com" class="blue-button">VISIT SITE</a>
   </div>
-  </div>
+</div>
 <div class="row section text-center">
   <div class="small-12 medium-6 columns">
     <h5 class="section-header">OLD HOMEPAGE</h5>
