Added image overlays on project pages. Updated SALT Technologies page.

--- a/work/salt-technologies/index.html
+++ b/work/salt-technologies/index.html
@@ -30,37 +30,49 @@ categories: ['back-end','front-end','WordPress','Design','UX', 'Content Strategy
     <a href="http://www.salt.com" target="_blank" class="blue-button">VISIT SITE</a>
   </div>
 </div>
-<div class="row section text-center">
+<div class="row section">
   <div class="small-12 columns">
-    <h4 class="section-header">NEW WEBSITE</h4>
-    <p>Here's the new website I designed. The messaging & content are clear and direct, and there's a clear call to action for new users.</p>
-    <img src="/images/work/salt/salt-home-new.png">
+    <h5 class="section-header">LANDING PAGE</h5>
+    <p>This is the redesigned landing page. Though nothing was inherently wrong with the original, there was a lot of content with no clear impression of what the product being offered or where to sign up. I rebuilt it with simple, clear definition of the product along with a very obvious call to action.</p>
+    <div class="small-6 columns">
+      <h6 class="section-subheader">OLD PAGE</h6>
+      <a href="/images/work/salt/salt-home-old.png" class="project-img text-center"><img src="/images/work/salt/salt-home-old.png"></a>
+    </div>
+    <div class="small-6 columns">
+      <h6 class="section-subheader">NEW PAGE</h6>
+      <a href="/images/work/salt/salt-home-new.png" class="project-img text-center"><img src="/images/work/salt/salt-home-new.png"></a>
+    </div>
+
+
+  </div>
+</div>
+<div class="row section">
+  <div class="small-12 columns">
+    <h5 class="section-header">DEVELOPER PAGE</h5>
+    <p>This is the redesigned developer page. This page read much more like marketing marketing material for a non-technical audience rather than a technical page intended for developers to evaluate a product. There's no code examples, there were broken links to documentation and ambiguous, verbose descriptions of their technology. We rebuilt it with a focus on a technical audience: code examples, concise descriptions of tech, and updated links to documentation.</p>
+    <div class="small-6 columns">
+    <h6 class="section-subheader">OLD PAGE</h6>
+      <a href="/images/work/salt/salt-developers-old.png" class="project-img text-center">
+        <img src="/images/work/salt/salt-developers-old.png">
+      </a>
+    </div>
+    <div class="small-6 columns">
+    <h6 class="section-subheader">NEW PAGE</h6>
+      <a href="/images/work/salt/salt-developers-new.png" class="project-img text-center"><img src="/images/work/salt/salt-developers-new.png"></a>
+    </div>
+    
+    
+    <!-- <ul class="small-block-grid-1">
+      <li><a href="/images/work/salt/salt-home-old.png"><img src="/images/work/salt/salt-home-old.png"></a><p>The original landing Page. Though nothing was inherently wrong with it, there is a lot of content and no clear impression of what the product being offered is. Also, there's no clear indication of where to sign up or who to contact in order to purchase the product.</p></li>
+      <li><a href="/images/work/salt/salt-developers-old.png"><img src="/images/work/salt/salt-developers-old.png"></a><p>The original developer page. This page read much more like marketing marketing material than a page to tell developers about the offerings of SALT's product. There's no code examples, there were broken links to documentation and ambiguous descriptions of their technological support.</p></li>
+      <li><a href="/images/work/salt/salt-technology-old.png"><img src="/images/work/salt/salt-technology-old.png"></a><p>The original technology page.</p></li>
+    </ul> -->
+
   </div>
 </div>
 
-<div class="row section text-center">
-  <div class="small-12 columns">
-    <img src="/images/work/salt/salt-developers-new.png">
-  </div>
-</div>
-<div class="row section text-center">
-  <div class="small-12 columns">
-    <img src="/images/work/salt/salt-technology-new.png">
-  </div>
-</div>
 
-
-<div class="row section text-center">
-  <div class="small-12 columns">
-    <h4 class="section-header">OLD HOMEPAGE</h4>
-    <p>For reference, here are the pages from the old website. There's no clear organization of content, walls of text, and no calls to action.</p>
-
-    <img src="/images/work/salt/salt-home-old.png">
-
-  </div>
-  
-</div>
-
+<!-- 
 
 <div class="row section text-center">
   <div class="small-12 columns">
@@ -71,4 +83,4 @@ categories: ['back-end','front-end','WordPress','Design','UX', 'Content Strategy
   <div class="small-12 columns">
     <img src="/images/work/salt/salt-technology-old.png">
   </div>
-</div>
+</div> -->
