--- a/work/salt-technologies/index.html
+++ b/work/salt-technologies/index.html
@@ -30,45 +30,45 @@ categories: ['back-end','front-end','WordPress','Design','UX', 'Content Strategy
     <a href="http://www.salt.com" target="_blank" class="blue-button">VISIT SITE</a>
   </div>
 </div>
-<div class="row section">
+<div class="row section screenshots">
   <div class="small-12 columns">
     <h5 class="section-header">LANDING PAGE</h5>
     <p>This is the redesigned landing page. Though nothing was inherently wrong with the original, there was a lot of content with no clear impression of what the product being offered or where to sign up. I rebuilt it with simple, clear definition of the product along with a very obvious call to action.</p>
-    <div class="small-6 columns">
+    <div class="small-12 medium-6 columns">
       <h6 class="section-subheader">OLD</h6>
       <img class="project-img" src="/images/work/salt/salt-home-old.png">
     </div>
-    <div class="small-6 columns">
+    <div class="small-12 medium-6 columns">
       <h6 class="section-subheader">NEW</h6>
       <img class="project-img" src="/images/work/salt/salt-home-new.png">
     </div>
   </div>
 </div>
-<div class="row section">
+<div class="row section screenshots">
   <div class="small-12 columns">
     <h5 class="section-header">DEVELOPER PAGE</h5>
     <p>This is the redesigned developer page. This page read much more like marketing marketing material for a non-technical audience rather than a technical page intended for developers to evaluate a product. There's no code examples, there were broken links to documentation and ambiguous, verbose descriptions of their technology. We rebuilt it with a focus on a technical audience: code examples, concise descriptions of tech, and updated links to documentation.</p>
-    <div class="small-6 columns">
+    <div class="small-12 medium-6 columns">
       <h6 class="section-subheader">OLD</h6>
       <img class="project-img" src="/images/work/salt/salt-developers-old.png">
     </div>
-    <div class="small-6 columns">
+    <div class="small-12 medium-6 columns">
       <h6 class="section-subheader">NEW</h6>
       <img class="project-img" src="/images/work/salt/salt-developers-new.png">
     </div>
   </div>
 </div>
 
-<div class="row section">
+<div class="row section screenshots">
   <div class="small-12 columns">
     <h5 class="section-header">TECHNOLOGY PAGE</h5>
     <p>This is the redesigned technology page. This page was redesigned to include better information about the product's most up-to-date offerings, and to clear up the clutter & walls of text that were present in the old page.</p>
-    <div class="small-6 columns">
+    <div class="small-12 medium-6 columns">
       <h6 class="section-subheader">OLD</h6>
       
       <img class="project-img" src="/images/work/salt/salt-technology-old.png">
     </div>
-    <div class="small-6 columns">
+    <div class="small-12 medium-6 columns">
       <h6 class="section-subheader">NEW</h6>
       
       <img class="project-img" src="/images/work/salt/salt-technology-new.png">
